bak/app_zrpp_qhb/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-qhb-ingress
  namespace: test
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: qhb.sihai.com                           ##虚拟主机名称
    http:
      paths:
      - path: /
        backend:
          serviceName: app-qhb
          servicePort: 9972
